--- a/index.html
+++ b/index.html
@@ -34,15 +34,6 @@
             --slogan-border-radius: 15px;
             --slogan-font-size: 1.8em;
             --slogan-transition: opacity 1s ease-in-out;
-            --toggle-button-bg: var(--secondary-color);
-            --toggle-button-color: #fff;
-            --traffic-sign-bg-color: linear-gradient(135deg, rgba(255, 165, 0, 0.9), rgba(255, 165, 0, 0.7)); /* Gradient sắc cam */
-            --traffic-sign-font-size: 1.5em;
-            --sign-count-bg-color: linear-gradient(135deg, rgba(40, 167, 69, 0.9), rgba(40, 167, 69, 0.7)); /* Gradient sắc xanh lá giống khẩu hiệu */
-            --sign-count-color: #ffffff;
-            --sign-count-padding: 15px;
-            --sign-count-border-radius: 15px;
-            --sign-count-font-size: 1.2em;
         }
 
         /* Reset CSS */
@@ -69,7 +60,7 @@
             text-align: center;
         }
 
-        .slogan-container, .traffic-sign-container, .sign-count-container {
+        .slogan-container {
             width: 90%;
             max-width: 800px;
             background: var(--slogan-bg-color);
@@ -82,10 +73,9 @@
             align-items: center;
             justify-content: center;
             overflow: hidden;
-            position: relative;
         }
 
-        #slogan, #trafficSign, #signCountDisplay {
+        #slogan {
             font-family: var(--slogan-font);
             font-size: var(--slogan-font-size);
             color: var(--slogan-color);
@@ -95,9 +85,7 @@
             word-wrap: break-word;
         }
 
-        .slogan-container.active #slogan,
-        .traffic-sign-container.active #trafficSign,
-        .sign-count-container.active #signCountDisplay {
+        .slogan-container.active #slogan {
             opacity: 1;
         }
 
@@ -201,23 +189,6 @@
             display: none; /* Initially hidden */
         }
 
-        .toggle-button {
-            background-color: var(--secondary-color);
-            color: var(--toggle-button-color);
-            cursor: pointer;
-            padding: 10px 20px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            font-size: 1em;
-            font-weight: 700;
-        }
-
-        .toggle-button:hover:not(:disabled) {
-            opacity: 0.9;
-            transform: scale(1.05);
-        }
-
         button:hover:not(:disabled) {
             opacity: 0.9;
             transform: scale(1.05);
@@ -239,11 +210,11 @@
                 max-width: 220px;
             }
 
-            #slogan, #trafficSign, #signCountDisplay {
+            #slogan {
                 font-size: 1.2em; /* Giảm kích thước font trên thiết bị nhỏ */
             }
 
-            .slogan-container, .traffic-sign-container, .sign-count-container {
+            .slogan-container {
                 padding: 15px;
             }
         }
@@ -259,56 +230,37 @@
         }
 
         /* Định dạng hướng dẫn sử dụng */
-        #instructions {
-            margin-top: 20px;
-            width: 100%;
-            max-width: 800px;
-            background-color: var(--white-bg);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            text-align: left;
-            font-family: var(--qa-answer-font);
-            color: var(--text-color);
-        }
-
-        #instructions h2 {
+        #predictionResult h2 {
             font-size: 1.5em;
             margin-bottom: 10px;
             color: var(--primary-color);
             text-align: center;
         }
 
-        #instructions ol {
+        #predictionResult ol {
+            text-align: left;
+            max-width: 600px;
+            width: 100%;
+            margin: 0 auto;
             padding-left: 20px;
+            font-size: 0.9em; /* Giảm kích thước font chữ */
+            color: var(--text-color);
             list-style-position: inside; /* Căn đều các dấu đầu dòng */
+            font-family: var(--qa-answer-font); /* Sử dụng Open Sans cho danh sách */
         }
 
-        #instructions li {
+        #predictionResult li {
             margin-bottom: 10px;
             line-height: 1.6;
         }
 
         /* Định dạng số lượng biển báo */
-        #signCountDisplay {
-            font-family: var(--qa-question-font);
-            font-size: var(--sign-count-font-size);
-            color: var(--sign-count-color);
-            opacity: 0;
-            transition: var(--slogan-transition);
+        #signCount {
+            margin-top: 10px;
+            font-size: 16px;
+            color: var(--error-color); /* Màu đỏ để làm nổi bật */
             text-align: center;
-            word-wrap: break-word;
-        }
-
-        .sign-count-container.active #signCountDisplay {
-            opacity: 1;
-        }
-
-        #signCountDisplay {
-            background: var(--sign-count-bg-color);
-            padding: var(--sign-count-padding);
-            border-radius: var(--slogan-border-radius);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            font-weight: bold;
         }
 
         #signMeaning {
@@ -319,7 +271,6 @@
             max-width: 600px;
             position: relative;
             word-wrap: break-word; /* Đảm bảo dòng dài được xuống dòng */
-            font-family: var(--qa-answer-font);
         }
 
         /* Loading Spinner Styles */
@@ -456,37 +407,6 @@
             line-height: 1.6;
         }
 
-        /* Phần Danh Sách Biển Báo */
-        .traffic-sign-section {
-            width: 100%;
-            max-width: 800px;
-            background: var(--traffic-sign-bg-color);
-            padding: 20px;
-            border-radius: var(--slogan-border-radius);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            margin-bottom: 20px;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            position: relative;
-        }
-
-        #trafficSign {
-            font-family: var(--slogan-font);
-            font-size: var(--traffic-sign-font-size);
-            color: #fff;
-            opacity: 0;
-            transition: var(--slogan-transition);
-            text-align: center;
-            word-wrap: break-word;
-        }
-
-        .traffic-sign-section.active #trafficSign {
-            opacity: 1;
-        }
-
     </style>
 </head>
 <body>
@@ -494,11 +414,6 @@
     <!-- Phần Khẩu Hiệu Tham Gia Giao Thông -->
     <div class="slogan-container">
         <p id="slogan"></p>
-    </div>
-
-    <!-- Phần Hiển Thị Số Lượng Biển Báo -->
-    <div class="sign-count-container">
-        <p id="signCountDisplay">Số lượng biển báo có thể nhận diện: <strong id="totalSigns">0</strong></p>
     </div>
 
     <div class="container">
@@ -530,18 +445,16 @@
             <div class="spinner"></div>
         </div>
         <div id="predictionResult" aria-live="polite">
-            <button id="toggleInstructions" class="toggle-button" aria-expanded="false">Hướng Dẫn Sử Dụng</button>
-            <div id="instructions" style="display: none;">
-                <h2>Hướng Dẫn Sử Dụng</h2>
-                <ol>
-                    <li>Nhấn nút <strong>"Bắt Đầu"</strong> để khởi động camera.</li>
-                    <li>Khi camera đã khởi động, nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
-                    <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
-                    <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
-                    <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
-                    <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
-                </ol>
-            </div>
+            <h2>Hướng Dẫn Sử Dụng</h2>
+            <ol>
+                <li>Nhấn nút <strong>"Bắt Đầu"</strong> để khởi động camera.</li>
+                <li>Khi camera đã khởi động, nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
+                <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
+                <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
+                <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
+                <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
+            </ol>
+            <p id="signCount">Số lượng biển báo có thể nhận diện: <strong id="totalSigns">0</strong></p>
         </div>
         <div id="signMeaning" aria-live="polite"></div>
 
@@ -594,11 +507,6 @@
             </div>
         </div>
 
-        <!-- Phần Danh Sách Biển Báo Nhận Diện -->
-        <div class="traffic-sign-section">
-            <p id="trafficSign"></p>
-        </div>
-
         <!-- Nút "Làm Bài Kiểm Tra" Đặt Dưới Phần Hỏi Đáp -->
         <div id="quizButton-container">
             <button id="quizButton" aria-label="Làm bài kiểm tra" title="Làm bài kiểm tra giao thông">Làm Bài Kiểm Tra</button>
@@ -624,18 +532,12 @@
         const retakeButton = document.getElementById('retakeButton');
         const capturedImage = document.getElementById('capturedImage');
         const predictionResult = document.getElementById('predictionResult');
-        const instructions = document.getElementById('instructions');
-        const toggleInstructions = document.getElementById('toggleInstructions');
         const signMeaning = document.getElementById('signMeaning');
         const loadingModel = document.getElementById('loadingModel');
         const loadingPrediction = document.getElementById('loadingPrediction');
         const signCount = document.getElementById('totalSigns');
         const quizButton = document.getElementById('quizButton');
         const overlay = document.querySelector('.overlay');
-        const trafficSignContainer = document.querySelector('.traffic-sign-section');
-        const trafficSignElement = document.getElementById('trafficSign');
-        const signCountContainer = document.querySelector('.sign-count-container');
-        const signCountDisplay = document.getElementById('signCountDisplay');
         let stream = null;
         let isProcessing = false;
         let cameraStarted = false; // Biến trạng thái camera
@@ -750,7 +652,6 @@
                     retakeButton.style.display = 'inline-block';
                     // Không ẩn nút "Chụp Ảnh" để người dùng có thể chụp lại nếu cần
                     predictionResult.innerHTML = "";
-                    instructions.style.display = 'none'; // Ẩn hướng dẫn khi chụp ảnh
                     signMeaning.textContent = "";
                     readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
                     quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
@@ -797,17 +698,15 @@
             captureButton.style.display = 'inline-block';
             captureButton.textContent = "Chụp Ảnh"; // Reset nhãn nút sau khi chụp lại
             predictionResult.innerHTML = `
-                <button id="toggleInstructions" class="toggle-button" aria-expanded="false">Hướng Dẫn Sử Dụng</button>
-                <div id="instructions" style="display: none;">
-                    <h2>Hướng Dẫn Sử Dụng</h2>
-                    <ol>
-                        <li>Nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
-                        <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
-                        <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
-                        <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
-                        <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
-                    </ol>
-                </div>
+                <h2>Hướng Dẫn Sử Dụng</h2>
+                <ol>
+                    <li>Nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
+                    <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
+                    <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
+                    <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
+                    <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
+                </ol>
+                <p id="signCount">Số lượng biển báo có thể nhận diện: <strong id="totalSigns">0</strong></p>
             `;
             signMeaning.textContent = "";
             overlay.style.display = 'block'; // Hiển thị lại overlay khi chụp lại
@@ -815,11 +714,6 @@
             // Hiển thị lại video nếu nó đã bị ẩn
             video.style.display = 'block';
             video.style.opacity = 1;
-            // Thêm lại event listener cho nút toggleInstructions
-            const newToggleInstructions = document.getElementById('toggleInstructions');
-            if (newToggleInstructions) {
-                newToggleInstructions.addEventListener('click', toggleInstructionsFunction);
-            }
         }
 
         /**
@@ -863,26 +757,17 @@
 
                         // Lưu labels vào biến toàn cục để sử dụng sau
                         window.labels = labels;
-
-                        // Start displaying traffic signs
-                        startTrafficSignRotation();
                     } else {
                         console.warn("metadata.json không chứa trường 'labels' hoặc không phải là một mảng.");
                         // Nếu không có labels trong metadata.json, bạn có thể định nghĩa nhãn trực tiếp ở đây
                         window.labels = ["P.101", "W.208", "W.205", "W.207", "P.103"]; // Thay đổi theo nhu cầu
                         signCount.textContent = window.labels.length;
-
-                        // Start displaying traffic signs
-                        startTrafficSignRotation();
                     }
                 } else {
                     console.warn("Không thể tải metadata.json. Sử dụng nhãn từ mã JavaScript hoặc định nghĩa trong metadata.json.");
                     // Nếu không thể tải metadata.json, định nghĩa nhãn trực tiếp trong mã JavaScript
                     window.labels = ["P.101", "W.208", "W.205", "W.207", "P.103"]; // Thay đổi theo nhu cầu
                     signCount.textContent = window.labels.length;
-
-                    // Start displaying traffic signs
-                    startTrafficSignRotation();
                 }
             } catch (err) {
                 console.error("Lỗi khi tải mô hình: ", err);
@@ -955,15 +840,6 @@
         }
 
         /**
-         * Hàm toggle hiển thị hướng dẫn sử dụng
-         */
-        function toggleInstructionsFunction() {
-            const isVisible = instructions.style.display === 'block';
-            instructions.style.display = isVisible ? 'none' : 'block';
-            toggleInstructions.setAttribute('aria-expanded', !isVisible);
-        }
-
-        /**
          * Event listener cho nút "Đọc"
          */
         readButton.addEventListener('click', () => {
@@ -979,11 +855,6 @@
         quizButton.addEventListener('click', () => {
             window.open('https://sites.google.com/view/tracnghiemgiaothong', '_blank');
         });
-
-        /**
-         * Event listener cho nút "Hướng Dẫn Sử Dụng"
-         */
-        toggleInstructions.addEventListener('click', toggleInstructionsFunction);
 
         /**
          * Cập nhật danh sách giọng nói khi chúng thay đổi
@@ -1038,7 +909,6 @@
                     downloadButton.style.display = 'inline-block';
                     retakeButton.style.display = 'inline-block';
                     predictionResult.innerHTML = "";
-                    instructions.style.display = 'none'; // Ẩn hướng dẫn khi tải ảnh lên
                     signMeaning.textContent = "";
                     readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
                     quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
@@ -1119,45 +989,6 @@
                 showSlogan(currentSloganIndex);
                 currentSloganIndex = (currentSloganIndex + 1) % slogans.length;
             }, 7000); // Mỗi 7 giây một khẩu hiệu
-        }
-
-        /**
-         * Phần Danh Sách Biển Báo Nhận Diện
-         */
-        const trafficSigns = []; // Sẽ được cập nhật sau khi tải mô hình
-
-        function startTrafficSignRotation() {
-            if (labels.length === 0) return;
-
-            let currentSignIndex = 0;
-            showTrafficSign(currentSignIndex);
-            currentSignIndex = (currentSignIndex + 1) % labels.length;
-            setInterval(() => {
-                showTrafficSign(currentSignIndex);
-                currentSignIndex = (currentSignIndex + 1) % labels.length;
-            }, 7000); // Mỗi 7 giây một biển báo
-        }
-
-        function showTrafficSign(index) {
-            const signName = labels[index];
-            trafficSignElement.textContent = `Biển Báo: ${signName}`;
-            trafficSignContainer.classList.add('active');
-            setTimeout(() => {
-                trafficSignContainer.classList.remove('active');
-            }, 6000); // Hiển thị biển báo trong 6 giây
-        }
-
-        /**
-         * Phần Hiển Thị Số Lượng Biển Báo
-         */
-        function updateSignCount() {
-            if (labels.length > 0) {
-                signCountDisplay.textContent = `Số lượng biển báo có thể nhận diện: ${labels.length}`;
-                signCountContainer.classList.add('active');
-                setTimeout(() => {
-                    signCountContainer.classList.remove('active');
-                }, 6000); // Hiển thị số lượng biển báo trong 6 giây
-            }
         }
 
     </script>
